--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "marked": "^11.0.0",
     "next-auth": "^4.24.5",
     "mongodb": "^6.3.0",
-    "bcryptjs": "^2.4.3"
+    "bcryptjs": "^2.4.3",
+    "pdf-parse": "^1.1.1",
+    "openai": "^4.20.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
