--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "gray-matter": "^4.0.3",
-    "marked": "^11.0.0",
-    "next-auth": "^4.24.5",
-    "mongodb": "^6.3.0",
     "bcryptjs": "^2.4.3",
+    "gray-matter": "^4.0.3",
+    "marked": "^11.2.0",
+    "mongodb": "^6.3.0",
+    "next": "^14.0.0",
+    "next-auth": "^4.24.5",
+    "openai": "^4.20.0",
     "pdf-parse": "^1.1.1",
-    "openai": "^4.20.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
-    "@types/bcryptjs": "^2.4.6",
     "typescript": "^5.0.0"
   }
 }
